--- a/app/src/main/res/xml/kbd_symbols.xml
+++ b/app/src/main/res/xml/kbd_symbols.xml
@@ -127,7 +127,7 @@
         <Key
             android:keyLabel=";" />
         <Key
-            android:keyLabel="/" />
+            android:keyLabel="," />
         <Key
             android:keyLabel="\?"
             android:popupKeyboard="@xml/kbd_popup_template"
@@ -146,9 +146,15 @@
         android:rowEdgeFlags="bottom"
     >
         <Key
+            android:keyLabel="Ctrl"
+            android:codes="@integer/key_ctrl_left"
+            android:isSticky="true"
+            android:keyWidth="15%p"
+            android:isModifier="true" />
+        <Key
             android:codes="@integer/key_symbol"
             android:keyLabel="@string/label_alpha_key"
-            android:keyWidth="20%p"
+            android:keyWidth="15%p"
             android:isModifier="true"
             android:keyEdgeFlags="left" />
         <Key
@@ -158,13 +164,18 @@
             android:codes="@integer/key_space"
             android:keyIcon="@drawable/sym_keyboard_space"
             android:iconPreview="@drawable/sym_keyboard_feedback_space"
-            android:keyWidth="40%p"
+            android:keyWidth="20%p"
             android:isModifier="true" />
         <Key
             android:keyLabel="."
             android:keyIcon="@drawable/hint_popup"
             android:popupKeyboard="@xml/popup_punctuation"
             android:isModifier="true" />
+        <Key
+            android:codes="@integer/key_dpad_center"
+            android:isModifier="true"
+            android:isCursor="true"
+            android:keyLabel="&#x25cb;" />
         <Key
             android:codes="@integer/key_return"
             android:keyIcon="@drawable/sym_keyboard_return"
@@ -177,6 +188,12 @@
         android:keyboardMode="@+id/mode_symbols_with_settings_key"
         android:rowEdgeFlags="bottom"
     >
+        <Key
+            android:keyLabel="Ctrl"
+            android:codes="@integer/key_ctrl_left"
+            android:isSticky="true"
+            android:keyWidth="15%p"
+            android:isModifier="true" />
         <Key
             android:codes="@integer/key_symbol"
             android:keyLabel="@string/label_alpha_key"
@@ -195,7 +212,7 @@
             android:codes="@integer/key_space"
             android:keyIcon="@drawable/sym_keyboard_space"
             android:iconPreview="@drawable/sym_keyboard_feedback_space"
-            android:keyWidth="30%p"
+            android:keyWidth="20%p"
             android:isModifier="true" />
         <Key
             android:keyLabel="."
@@ -206,7 +223,7 @@
             android:codes="@integer/key_return"
             android:keyIcon="@drawable/sym_keyboard_return"
             android:iconPreview="@drawable/sym_keyboard_feedback_return"
-            android:keyWidth="25%p"
+            android:keyWidth="20%p"
             android:isModifier="true"
             android:keyEdgeFlags="right" />
     </Row>
