--- a/app/src/main/res/xml/kbd_compact.xml
+++ b/app/src/main/res/xml/kbd_compact.xml
@@ -164,10 +164,16 @@
     </Row>
     <Row>
         <Key
+            android:codes="@integer/key_tab"
+            android:keyIcon="@drawable/sym_keyboard_tab"
+            android:iconPreview="@drawable/sym_keyboard_feedback_tab"
+            android:keyWidth="4.54545454%p"
+            android:popupKeyboard="@xml/popup_tab"
+            android:isModifier="true" />
+        <Key
             android:keyLabel="a"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/alternates_for_a"
-            android:horizontalGap="4.54545454%p"
             android:keyEdgeFlags="left" />
         <Key
             android:keyLabel="s"
@@ -285,13 +291,12 @@
             android:isSticky="true"
             android:keyWidth="8.29090909%p"
             android:isModifier="true" />
-        <Key
-            android:codes="@integer/key_tab"
-            android:keyIcon="@drawable/sym_keyboard_tab"
-            android:iconPreview="@drawable/sym_keyboard_feedback_tab"
+         <Key
+            android:codes="@integer/key_dpad_center"
+            android:isModifier="true"
+            android:isCursor="true"
             android:keyWidth="8.29090909%p"
-            android:popupKeyboard="@xml/popup_tab"
-            android:isModifier="true" />
+            android:keyLabel="&#x25cb;" />
         <Key
             android:codes="@integer/key_space"
             android:keyIcon="@drawable/sym_keyboard_space"
